--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -1,9 +1,9 @@
-topData = self.getTopData();
-announcement = self.getAnnouncement();
-topItems = topData.getTopItems();
-classId = announcement.getClassId() ? announcement.getClassId().valueOf() : null;
-typeId = self.getSelectedTypeId();
-classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : [];
+topData = self.getTopData()
+announcement = self.getAnnouncement()
+topItems = topData.getTopItems()
+classId = announcement.getClassId() ? announcement.getClassId().valueOf() : null
+typeId = self.getSelectedTypeId()
+classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
 
 .announcement-form.loader-container
     .loader
