--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -202,9 +202,9 @@ TEXTAREA.animated-textarea{
 .pending-action{
   height: 100%;
   text-align: center;
-  width: 98%;
+  width: 100%;
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0px;
   background: url(images/common/paper-bg.gif) 0 0 repeat-y;
 
