fixed admin attendance page

--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryPage.jade
@@ -60,7 +60,7 @@ valuesEnum = chlk.models.attendance.AttendanceTypeEnum;
                 .active=Msg.Now
     .attendance-content
         .attendance-now
-            if nowData.getAbsentNowStudents().length
+            if nowData.getAbsentNowStudents()
                 .top-container
                     .stats.i-b
                         .attendance-box.rightnow-usually
