--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -7,7 +7,7 @@
     .wrapper
         +ActionLink('announcement','add').fullwidth-button.add-new
         .buttons-row
-            +ActionLink('calendar', 'month').one-third-button.calendar(title="View Calendar") Calendar
+            +ActionLink('calendar', 'day').one-third-button.calendar(title="View Calendar") Calendar
             +ActionLink('message', 'page').one-third-button.messages(title="View Messages") Messages
             +ActionLink('admins', 'people').one-third-button.people(title="View People") People
         .buttons-row
