--- a/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
@@ -96,4 +96,91 @@
   }
 }
 
+.person-avatar-wrapper {
+  position: relative;
+  z-index: 0;
+}
 
+.person-avatar-m-40, .person-avatar-w-40, .person-avatar-m-47, .person-avatar-w-47, .person-avatar-m-64, .person-avatar-w-64, .person-avatar-m-128, .person-avatar-w-128{
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+  &:before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
+}
+
+.person-avatar-m-40, .person-avatar-w-40{
+  height: 40px;
+  width: 40px;
+}
+
+.person-avatar-m-40{
+  &:before{
+    background: url(avatars/40/.no-avatar.png);
+  }
+}
+
+.person-avatar-w-40{
+  &:before{
+    background: url(avatars/40/.no-avatar-female.png);
+  }
+}
+
+.person-avatar-m-47, .person-avatar-w-47{
+  height: 47px;
+  width: 47px;
+}
+
+.person-avatar-m-47{
+  &:before{
+    background: url(avatars/47/.no-avatar.png);
+  }
+}
+
+.person-avatar-w-47{
+  &:before{
+    background: url(avatars/47/.no-avatar-female.png);
+  }
+}
+
+.person-avatar-m-64, .person-avatar-w-64{
+  height: 64px;
+  width: 64px;
+}
+
+.person-avatar-m-64{
+  &:before{
+    background: url(avatars/64/.no-avatar.png);
+  }
+}
+
+.person-avatar-w-64{
+  &:before{
+    background: url(avatars/64/.no-avatar-female.png);
+  }
+}
+
+.person-avatar-m-128, .person-avatar-w-128{
+  height: 128px;
+  width: 128px;
+}
+
+.person-avatar-m-128{
+  &:before{
+    background: url(avatars/128/.no-avatar.png);
+  }
+}
+
+.person-avatar-w-128{
+  &:before{
+    background: url(avatars/128/.no-avatar-female.png);
+  }
+}
