--- a/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
@@ -3,7 +3,7 @@ announcementId = self.app.getAnnouncementId() ? self.app.getAnnouncementId().val
 .app-wrapper
     .x-window-header
         .toolbar
-            each btn in self.buttons
+            each btn in self.toolbarButtons
                 btnTarget = btn.isTargetBlank() ? "_blank" : undefined
                 url = btn.getUrl() ? btn.getUrl() : "javascript:void(0)"
                 a(id=btn.getId(),
