--- a/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/my-apps.jade
@@ -15,7 +15,7 @@ mixin MyAppsIconLink(app, editable)
             +Hidden('selfInstalled', app.isSelfInstalled())
             +Hidden('uninstallable', app.isUninstallable())
     else
-        +ActionLink('apps', 'viewApp', app.getMyAppsUrl()).my-app-icon-link
+        +ActionLink('apps', 'viewApp', app.getUrl(), app.getMyAppsUrl(), chlk.models.apps.AppModes.MYAPPSVIEW).my-app-icon-link
             .app-list-item
                 .icon(class=editable ? "jiggly" : undefined)
                     pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
