fix in calendar

--- a/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
@@ -1,5 +1,5 @@
 mixin Calendar(data, bodyTpl, bodyModel, controller, actions, params)
-    .chlk-calendar
+    .chlk-calendar(attributes)
         .header
             .header-container
                 .buttons-container
