--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekPage.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekPage.jade
@@ -2,7 +2,10 @@ div
     actions = {currentAction: 'week', day: 'day', week: 'week', month: 'month'}
     obj = self.getDataForToolBar()
     params = obj.selectedItemId || obj.selectedIds
-    +LeftRightToolbar(obj.data, obj.tpl, 'calendar', 'week', [self.getCurrentDate().format('mm-dd-yy')])(
+    toolBarParams = [self.getCurrentDate().format('mm-dd-yy')]
+    if(!obj.selectedItemId)
+        -toolBarParams.push(null)
+    +LeftRightToolbar(obj.data, obj.tpl, 'calendar', 'week', toolBarParams)(
         selectedItemId=obj.selectedItemId,
         selectedIds=obj.selectedIds
         multiple=obj.multiple
