--- a/Chalkable.Web/assets/jade/controls/image.jade
+++ b/Chalkable.Web/assets/jade/controls/image.jade
@@ -7,7 +7,7 @@ mixin PersonImg(person, size)
         src = chlk.templates.JadeTemplate.prototype.getPictureURL(person.getId(), size, size)
         isWoman = person.getGender().toLowerCase() == 'f';
         alternativeHref = joinUrls(window.scriptsRoot, 'Content/avatars/' + size + '/.no-avatar') + (isWoman ? '-female' : '') + '.png';
-        div.person-avatar-wrapper
+        .avatar-wrapper
             div(attributes)(class="person-avatar-" + (isWoman ? "w" : "m") + "-" + size, style = "background-image: url(" + src + ")")
 
 mixin ClassImg(course, width, height)
