--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -31,7 +31,11 @@ ul.ui-autocomplete{
             color: #2f424b;
             font-size: 11px;
             font-weight: bold;
-            width: 100px;
+            width: 80px;
+          }
+          >div.avatar-wrapper{
+            display: inline-block;
+            vertical-align: middle;
           }
         }
       }
