--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -20,9 +20,18 @@ devName = app.getDeveloperInfo().getName()
             .permissions
                 .permissions-group
                     .group-header This app is for:
+                    each validRole in app.getValidRoles()
+                        .permission
+                            .icon(class=self.getRoleTypeClass(validRole.getId()))
+                            .description=validRole.getName()
                 .permissions-group
                     .group-header Info this app uses:
                         each permission in app.getPermissions()
-                            .permission=permission.getName()
+                            .permission
+                                .icon(class=self.getPermissionTypeClass(permission.getId().valueOf()))
+                                .description=permission.getName()
+
+
+
 
 
