--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market.scss
@@ -9,6 +9,92 @@ DIV.page {
 
              }
 
+            .user-balance{
+              width: 250px;
+              display: inline-block;
+              color: #868686;
+              font-size: 18px;
+              padding-left: 10px;
+              height: 36px;
+              border-right: 1px solid #cfcfcf;
+            }
+
+            .app-filter{
+              margin-bottom: 30px;
+              > DIV{
+                display:inline-block;
+              }
+
+
+              .btn{
+                border-radius: 4px;
+                border: 1px solid #a4a4a4;
+                @include box-shadow(inset 1px 1px 1px #ffffff);
+                color: #393939;
+                @include background(linear-gradient(top, #ffffff,#dadada));
+                font: normal 14px 'Myriad Pro';
+                text-shadow: 1px 1px 1px white;
+                z-index: 2;
+                padding-bottom: 7px;
+                padding-top: 7px;
+                padding-left: 0px;
+                padding-right: 2px;
+                width: 82px;
+                text-align: center;
+                cursor: pointer;
+
+                &.pressed{
+                  background: #adadad;
+                  color: #ffffff;
+                  text-shadow: 1px 1px 1px #a4a4a4;
+                  box-shadow: none;
+                }
+              }
+
+              .subject{
+                margin-right: 10px;
+                .subject-filter{
+                  .title{
+
+                  }
+
+
+                }
+              }
+              .price{
+                .price-type{
+                  display: inline-block;
+                  width: 45px;
+                  &.all{
+                    width: 30px;
+                    border-radius: 4px 0px 0px 4px;
+                  }
+                  &.paid{
+                    border-radius: 0;
+                  }
+
+                  &.free{
+                    border-radius: 0px 4px 4px 0px;
+                  }
+
+
+
+
+
+                }
+              }
+
+              .sort{
+                span{
+                  color: #8f8f8f;
+                  font-size: 14px;
+                  display: inline-block;
+                  margin-left: 25px;
+                  margin-right: 10px;
+                }
+              }
+            }
+
             .apps{
               width: 670px;
 
