--- a/Chalkable.Web/assets/sass/partials/main/disciplines/_discipline_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/disciplines/_discipline_list.scss
@@ -4,7 +4,7 @@
     .disciplines{
       .left{
         padding-left: 5px;
-        lable{
+        label{
           margin-left: 15px;
           margin-right: 10px;
           font-size: 12px;
