--- a/Chalkable.Web/assets/sass/partials/_icons.scss
+++ b/Chalkable.Web/assets/sass/partials/_icons.scss
@@ -50,3 +50,10 @@
 .feed-notifications {
   background: url(images/icons/new-notifications.png) 0% 50% no-repeat;
 }
+
+.choose-date-icon {
+  display: inline-block;
+  width: 30px;
+  height: 24px;
+  background: url(images/icons/choose-date.png) 0 center no-repeat;
+}
