--- a/Chalkable.Web/assets/sass/partials/controls/_select.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_select.scss
@@ -22,4 +22,14 @@
       }
     }
   }
+
+  &.white{
+    .chzn-single{
+      background: white;
+
+      div{
+        @include background(linear-gradient(top, #ffffff, #dadada));
+      }
+    }
+  }
 }
