--- a/Chalkable.Web/assets/sass/partials/main/_admin.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_admin.scss
@@ -158,7 +158,9 @@ BODY {
               .chart-container {
                 position: relative;
                 left: -7px;
-                margin-top: 10px;
+                //margin-top: 10px;
+                height: 166px;
+                overflow: hidden;
               }
 
               .chart-block{
